@@ -1,3 +1,7 @@
+2005-05-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* templates/tset-list.html: Tokensets list now displays their sizes
+
 2005-05-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* bin/ttproclist.in: New utility for generating DDX files
